--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,91 +3,81 @@
 
 @string{aps = {American Physical Society,}}
 
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
-}
-
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
-}
-
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
-}
-
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
+@article{---,
+  title={Atmosphere kamaal ka tha (was wonderful): A Multilingual Joint Learning Framework for Aspect Category Detection and Sentiment Classification},
+  author={Mamta and Ekbal, Asif},
+  journal={IEEE Transactions on Computational Social Systems},
+  year={2024},
   selected={true}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+@article{ahmad2023elevating,
+  title={Elevating Code-mixed Text Handling through Auditory Information of Words},
+  author={Ahmad, Zishan and Ekbal, Asif and others},
+  journal={Conference on Empirical Methods in Natural Language Processing},
+  year={2023},
+  selected={true}
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
+@article{mamta2023transformer,
+  title={Transformer based multilingual joint learning framework for code-mixed and english sentiment analysis},
+  author={Mamta and Ekbal, Asif},
+  journal={Journal of Intelligent Information Systems},
+  pages={1--23},
+  year={2023},
+  publisher={Springer}
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@inproceedings{mamta2023service,
+  title={Service is good, very good or excellent? towards aspect based sentiment intensity analysis},
+  author={Mamta and Ekbal, Asif},
+  booktitle={European Conference on Information Retrieval},
+  pages={685--700},
+  year={2023},
+  organization={Springer},
+  selected={true}
 }
 
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif}
+@inproceedings{ekbal2022adversarial,
+  title={Adversarial sample generation for aspect based sentiment classification},
+  author={Ekbal, Asif and others},
+  booktitle={Findings of the Association for Computational Linguistics: AACL-IJCNLP 2022},
+  pages={478--492},
+  year={2022},
+  selected={true}
+}
+
+@article{mamta2022exploring,
+  title={Exploring multi-lingual, multi-task, and adversarial learning for low-resource sentiment analysis},
+  author={Mamta and Ekbal, Asif and Bhattacharyya, Pushpak},
+  journal={Transactions on Asian and Low-Resource Language Information Processing},
+  volume={21},
+  number={5},
+  pages={1--19},
+  year={2022},
+  publisher={ACM New York, NY}
+}
+
+@inproceedings{ekbal2020multi,
+  title={Multi-domain tweet corpora for sentiment analysis: resource creation and evaluation},
+  author={Ekbal, Asif and Bhattacharyya, Pushpak and Srivastava, Shikha and Kumar, Alka and Saha, Tista and others},
+  booktitle={Proceedings of the Twelfth Language Resources and Evaluation Conference},
+  pages={5046--5054},
+  year={2020}
+}
+
+@inproceedings{ekbal2022hindimd,
+  title={HindiMD: A multi-domain corpora for low-resource sentiment analysis},
+  author={Ekbal, Asif and Bhattacharyya, Pushpak and Saha, Tista and Kumar, Alka and Srivastava, Shikha and others},
+  booktitle={Proceedings of the Thirteenth Language Resources and Evaluation Conference},
+  pages={7061--7070},
+  year={2022}
+}
+
+@inproceedings{behera2020only,
+  title={Only text? only image? or both? Predicting sentiment of internet memes},
+  author={Behera, Pranati and Ekbal, Asif and others},
+  booktitle={Proceedings of the 17th International Conference on Natural Language Processing (ICON)},
+  pages={444--452},
+  year={2020}
 }
