--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -20,6 +20,24 @@
     pages = "21059--21070",
     selected={true}
 }
+@inproceedings{10.1145/3664647.3681703,
+author = {Mamta and Singh, Gopendra Vikram and Kori, Deepak Raju and Ekbal, Asif},
+title = {Aspect-Based Multimodal Mining: Unveiling Sentiments, Complaints, and Beyond in User-Generated Content},
+year = {2024},
+isbn = {9798400706868},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3664647.3681703},
+doi = {10.1145/3664647.3681703},
+abstract = {Sentiment analysis and complaint identification are key tools in mining user preferences by measuring the polarity and breach of expectations. Recent works on complaint identification identify aspect categories and classify them into complaint or non-complaint classes. However, aspect category-based complaint identification provides high-level information about the features of products. In addition, it is also observed that the user sometimes does not complain about a specific aspect but expresses concern about specific aspects in a respectful way. Currently, unimodal and multimodal studies do not differentiate this thin line between complaint and concern. In this work, we propose the task of multimodal aspect term-based analysis beyond sentiments and complaints. It comprises of two sub-tasks, viz (i) classification of the given aspect term into one of the four classes, viz. praise, concern, complaint, and others, (ii) identification of the cause of praise, concern, and complaint classes. We propose a first benchmark explainable multimodal corpus annotated for aspect term-based complaints, praises, concerns, their corresponding causes, and sentiments. Further, we propose an effective technique for the joint learning of aspect term-based complaint/concern/praise identification and cause extraction tasks (primary tasks) where sentiment analysis is used as a secondary task to assist primary tasks and establish them as baselines for further research in this direction. The dataset has been made available on https://www.iitp.ac.in/~ai-nlp-ml/resources.html and at Github repository: https://github.com/20118/MAspectX.},
+booktitle = {Proceedings of the 32nd ACM International Conference on Multimedia},
+pages = {6433–6442},
+numpages = {10},
+keywords = {aspect terms, complaints, few shot prompting, language models, sentiment},
+location = {Melbourne VIC, Australia},
+series = {MM '24}
+selected={true}
+}
 @article{---,
   title={Atmosphere kamaal ka tha (was wonderful): A Multilingual Joint Learning Framework for Aspect Category Detection and Sentiment Classification},
   author={Mamta and Ekbal, Asif},
@@ -30,7 +48,7 @@
 
 @article{ahmad2023elevating,
   title={Elevating Code-mixed Text Handling through Auditory Information of Words},
-  author={{Mamta}, Ahmad, Zishan and Ekbal, Asif},
+  author={{Mamta}, and Ahmad, Zishan and Ekbal, Asif},
   journal={Conference on Empirical Methods in Natural Language Processing},
   year={2023},
   selected={true}
@@ -61,7 +79,6 @@
   booktitle={Findings of the Association for Computational Linguistics: AACL-IJCNLP 2022},
   pages={478--492},
   year={2022},
-  selected={true}
 }
 
 @article{mamta2022exploring,
