--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,19 +2,12 @@
 ---
 
 @string{aps = {American Physical Society,}}
-@inproceedings{mamta-etal-2024-biaswipe,
-    title = "{B}ias{W}ipe: Mitigating Unintended Bias in Text Classifiers through Model Interpretability",
-    author = "Mamta and
-      Chigrupaatii, Rishikant  and
-      Ekbal, Asif",
-    booktitle = "Proceedings of the 2024 Conference on Empirical Methods in Natural Language Processing",
-    month = nov,
-    year = "2024",
-    address = "Miami, Florida, USA",
-    publisher = "Association for Computational Linguistics",
-    url = "https://aclanthology.org/2024.emnlp-main.1172/",
-    pages = "21059--21070",
-    selected={true}
+@inproceedings{mamta2024biaswipe,
+  title={BiasWipe: Mitigating Unintended Bias in Text Classifiers through Model Interpretability},
+  author={Mamta, Mamta and Chigrupaatii, Rishikant and Ekbal, Asif},
+  booktitle={Proceedings of the 2024 Conference on Empirical Methods in Natural Language Processing},
+  pages={21059--21070},
+  year={2024}
 }
 @inproceedings{10.1145/3664647.3681703,
 author = {Mamta and Singh, Gopendra Vikram and Kori, Deepak Raju and Ekbal, Asif},
