--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -18,6 +18,23 @@ selected={true}
   year={2024}
 selected={true}
 }
+@article{singh2024multiseao,
+  title={MultiSEAO-Mix: A Multimodal Multitask Framework for Sentiment, Emotion, Support, and Offensive Analysis in Code-Mixed Setting},
+  author={Mamta, and Singh, Gopendra Vikram and Verma, Atul and Ekbal, Asif and others},
+  journal={IEEE Transactions on Computational Social Systems},
+  year={2024},
+  publisher={IEEE}
+}
+@article{mamta2025quality,
+  title={Quality achhi hai (is good), satisfied! Towards aspect based sentiment analysis in code-mixed language},
+  author={Mamta, and Ekbal, Asif},
+  journal={Computer Speech \& Language},
+  volume={89},
+  pages={101668},
+  year={2025},
+  publisher={Elsevier}
+  selected={true}
+}
 @article{---,
   title={Atmosphere kamaal ka tha (was wonderful): A Multilingual Joint Learning Framework for Aspect Category Detection and Sentiment Classification},
   author={Mamta and Ekbal, Asif},
