--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,7 +7,7 @@
   author={Mamta, Mamta and Chigrupaatii, Rishikant and Ekbal, Asif},
   booktitle={Proceedings of the 2024 Conference on Empirical Methods in Natural Language Processing},
   pages={21059--21070},
-  year={2024}
+  year={2024},
 selected={true}
 }
 @inproceedings{mamta2024aspect,
@@ -15,7 +15,7 @@ selected={true}
   author={Mamta and Singh, Gopendra Vikram and Kori, Deepak Raju and Ekbal, Asif},
   booktitle={Proceedings of the 32nd ACM International Conference on Multimedia},
   pages={6433--6442},
-  year={2024}
+  year={2024},
 selected={true}
 }
 @article{singh2024multiseao,
@@ -32,7 +32,7 @@ selected={true}
   volume={89},
   pages={101668},
   year={2025},
-  publisher={Elsevier}
+  publisher={Elsevier},
   selected={true}
 }
 @article{---,
