--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,7 +8,7 @@
   booktitle={Proceedings of the 2024 Conference on Empirical Methods in Natural Language Processing},
   pages={21059--21070},
   year={2024},
-selected={true}
+  selected={true}
 }
 @inproceedings{mamta2024aspect,
   title={Aspect-Based Multimodal Mining: Unveiling Sentiments, Complaints, and Beyond in User-Generated Content},
@@ -16,7 +16,7 @@ selected={true}
   booktitle={Proceedings of the 32nd ACM International Conference on Multimedia},
   pages={6433--6442},
   year={2024},
-selected={true}
+  selected={true}
 }
 @article{singh2024multiseao,
   title={MultiSEAO-Mix: A Multimodal Multitask Framework for Sentiment, Emotion, Support, and Offensive Analysis in Code-Mixed Setting},
@@ -45,7 +45,7 @@ selected={true}
 
 @article{ahmad2023elevating,
   title={Elevating Code-mixed Text Handling through Auditory Information of Words},
-  author={{Mamta}, and Ahmad, Zishan and Ekbal, Asif},
+  author={Mamta, and Ahmad, Zishan and Ekbal, Asif},
   journal={Conference on Empirical Methods in Natural Language Processing},
   year={2023},
   selected={true}
