--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,16 +7,14 @@
   author={Mamta, Mamta and Chigrupaatii, Rishikant and Ekbal, Asif},
   booktitle={Proceedings of the 2024 Conference on Empirical Methods in Natural Language Processing},
   pages={21059--21070},
-  year={2024},
-  selected={true}
+  year={2024}
 }
 @inproceedings{mamta2024aspect,
   title={Aspect-Based Multimodal Mining: Unveiling Sentiments, Complaints, and Beyond in User-Generated Content},
   author={Mamta and Singh, Gopendra Vikram and Kori, Deepak Raju and Ekbal, Asif},
   booktitle={Proceedings of the 32nd ACM International Conference on Multimedia},
   pages={6433--6442},
-  year={2024},
-  selected={true}
+  year={2024}
 }
 @article{singh2024multiseao,
   title={MultiSEAO-Mix: A Multimodal Multitask Framework for Sentiment, Emotion, Support, and Offensive Analysis in Code-Mixed Setting},
@@ -32,8 +30,7 @@
   volume={89},
   pages={101668},
   year={2025},
-  publisher={Elsevier},
-  selected={true}
+  publisher={Elsevier}
 }
 @article{---,
   title={Atmosphere kamaal ka tha (was wonderful): A Multilingual Joint Learning Framework for Aspect Category Detection and Sentiment Classification},
