--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -26,7 +26,7 @@
 @article{mamta2025quality,
   title={Quality achhi hai (is good), satisfied! Towards aspect based sentiment analysis in code-mixed language},
   author={Mamta, and Ekbal, Asif},
-  journal={Computer Speech \& Language},
+  journal={Computer Speech Language},
   volume={89},
   pages={101668},
   year={2025},
