--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,14 +7,16 @@
   author={Mamta, Mamta and Chigrupaatii, Rishikant and Ekbal, Asif},
   booktitle={Proceedings of the 2024 Conference on Empirical Methods in Natural Language Processing},
   pages={21059--21070},
-  year={2024}
+  year={2024},
+  selected={true}
 }
 @inproceedings{mamta2024aspect,
   title={Aspect-Based Multimodal Mining: Unveiling Sentiments, Complaints, and Beyond in User-Generated Content},
   author={Mamta and Singh, Gopendra Vikram and Kori, Deepak Raju and Ekbal, Asif},
   booktitle={Proceedings of the 32nd ACM International Conference on Multimedia},
   pages={6433--6442},
-  year={2024}
+  year={2024},
+  selected={true}
 }
 @article{singh2024multiseao,
   title={MultiSEAO-Mix: A Multimodal Multitask Framework for Sentiment, Emotion, Support, and Offensive Analysis in Code-Mixed Setting},
@@ -29,7 +31,7 @@
   journal={Computer Speech Language},
   volume={89},
   pages={101668},
-  year={2025},
+  year={2024},
   publisher={Elsevier}
 }
 @article{mamtaTCSS2024,
@@ -72,7 +74,7 @@
   author={Ekbal, Asif and others},
   booktitle={Findings of the Association for Computational Linguistics: AACL-IJCNLP 2022},
   pages={478--492},
-  year={2022},
+  year={2022}
 }
 
 @article{mamta2022exploring,
