--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -36,7 +36,7 @@
 }
 @article{mamtaTCSS2024,
   title={Atmosphere kamaal ka tha (was wonderful): A Multilingual Joint Learning Framework for Aspect Category Detection and Sentiment Classification},
-  author={Mamta, Mamta and Ekbal, Asif},
+  author={Mamta and Ekbal, Asif},
   journal={IEEE Transactions on Computational Social Systems},
   year={2024},
   selected={true}
