--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,7 +4,7 @@
 @string{aps = {American Physical Society,}}
 @inproceedings{mamta2024biaswipe,
   title={BiasWipe: Mitigating Unintended Bias in Text Classifiers through Model Interpretability},
-  author={Mamta, Mamta and Chigrupaatii, Rishikant and Ekbal, Asif},
+  author={Mamta, and Chigrupaatii, Rishikant and Ekbal, Asif},
   booktitle={Proceedings of the 2024 Conference on Empirical Methods in Natural Language Processing},
   pages={21059--21070},
   year={2024},
